feat: add temoignage

--- a/bom-front/src/app/global/temoignage/temoignage.component.html
+++ b/bom-front/src/app/global/temoignage/temoignage.component.html
@@ -1,1 +1,30 @@
 <p>temoignage works!</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <article class="blog-card">
+        <div class="blog-card__background">
+          <div class="card__background--wrapper">
+            <div class="card__background--main">
+              <img class="fond-img" src="../../../assets/img/cardfond.png" alt="bom">
+
+              <div class="card__background--layer"></div>
+            </div>
+          </div>
+        </div>
+        <div class="blog-card__head">
+          <span class="date__box">
+            <span class="date__day">11</span>
+            <span class="date__month">Janvier 2020</span>
+          </span>
+        </div>
+        <div class="blog-card__info">
+          <h5>Lea, infirmière, 36 ans</h5>
+          <p>Mon temoignage</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vero libero voluptatibus earum? Alias dignissimos quo cum, nulla esse facere atque, blanditiis doloribus at sunt quas, repellendus vel? Et, hic!</p>
+          <a href="#" class="btn btn--with-icon"><i class="btn-icon fa fa-long-arrow-right"></i>Demander de l'aide</a>
+        </div>
+      </article>
+    </div>
+  </div>
+</div>
