--- a/bom-front/src/app/main/account-manager/auth-google/auth-google.component.html
+++ b/bom-front/src/app/main/account-manager/auth-google/auth-google.component.html
@@ -1,1 +1,6 @@
-<button (click)="authenticate()">Google</button>
+<div style="display: flex; align-items: center; justify-content:center;" >
+  <button (click)="initGoogleAuth()" mat-button>
+    <mat-icon style="width: 50px; height:30px"
+              svgIcon="logoGoogle"></mat-icon> Login With Google
+  </button>
+</div>
