--- a/bom-front/src/app/main/account-manager/register/register.component.sass
+++ b/bom-front/src/app/main/account-manager/register/register.component.sass
@@ -17,6 +17,7 @@ mat-card-title
   font-weight: 100
   line-height: 38px
   margin: 0 0 10px
+  padding-top: 3%
 
 button
   display: inline-block !important
