feat: add responsive contact forms

--- a/bom-front/src/app/main/about/contact/contact.component.sass
+++ b/bom-front/src/app/main/about/contact/contact.component.sass
@@ -89,6 +89,22 @@ button:hover
   mat-card
     margin: 5% 20% 10%
 
+@media screen and (max-width: 1400px)
+  .split-right
+    width: 0%
+
+@media screen and (max-width: 1400px)
+   .split-left
+     width: 100%
+
 @media screen and (max-width: 720px)
   mat-card
     margin: 0 0 0
+
+@media screen and (max-width: 720px)
+  .split-right
+    width: 0%
+
+@media screen and (max-width: 720px)
+  .split-left
+    width: 100%
