--- a/bom-front/src/app/main/back-office/back-office.component.sass
+++ b/bom-front/src/app/main/back-office/back-office.component.sass
@@ -1,6 +1,11 @@
-.content
+.card-content
     height: 100%
-    
+    margin: 1em
+
 ngx-datatable
     width: 100%
     height: 100%
+
+mat-card-title
+    padding-bottom: 10px
+    border-bottom: 1px solid black
