--- a/bom-front/src/app/main/account-manager/auth-facebook/auth-facebook.component.html
+++ b/bom-front/src/app/main/account-manager/auth-facebook/auth-facebook.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; align-items: center; justify-content:center;" >
   <button (click)="signInWithFB()" mat-button>
     <mat-icon style="width: 50px; height:30px"
-              svgIcon="logoFacebook"></mat-icon> Login With Facebook
+              svgIcon="logoFacebook"></mat-icon> Connexion avec Facebook
   </button>
 </div>
