--- a/bom-front/src/app/main/account-manager/auth-google/auth-google.component.html
+++ b/bom-front/src/app/main/account-manager/auth-google/auth-google.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; align-items: center; justify-content:center;" >
   <button (click)="initGoogleAuth()" mat-button>
     <mat-icon style="width: 50px; height:30px"
-              svgIcon="logoGoogle"></mat-icon> Login With Google
+              svgIcon="logoGoogle"></mat-icon> Connexion avec Google
   </button>
 </div>
